# status

./: .gitmodules  Caddyfile  README.md  inventory.ini  monitoror.json  monitoror.service  playbook.yaml  pyproject.toml
status/: __init__.py  __main__.py  web.py
status/templates/: base.html  index.html
tests/: test_status.py
